--- a/basics.html
+++ b/basics.html
@@ -138,8 +138,8 @@ print(1, 2, 3, sep="-")          # Used to output multiple values with a separat
             <pre class="line-numbers"><code class="language-py">from pprint import pprint
 var01 = [1, 2, 3]
 var02 = {1: "one", 2: "two", 3: "three"}
-pprint(var01) # Used just like the print statement
-pprint(var02) # It prints the output in a more readable format</code></pre>
+pprint(var01)  # Used just like the print statement
+pprint(var02)  # It prints the output in a more readable format</code></pre>
             <li>Input and Output</li>
             <pre class="line-numbers"><code class="language-py">print(input())                          # Used to output strings
 print(input("Enter your name: "))       # Used to output strings with a prompt</code></pre>
@@ -153,12 +153,12 @@ print(input("Enter your name: "))       # Used to output strings with a prompt</
             <li>Arithmetic Operators</li>
             <pre class="line-numbers"><code class="language-py">x = 5
 y = 10
-z1 = x + y  # addition
-z2 = x - y  # subtraction
-z3 = x * y  # multiplication
-z4 = x / y  # division
-z5 = x % y  # modulus
-z6 = x ** y # exponent</code></pre>
+z1 = x + y     # addition
+z2 = x - y     # subtraction
+z3 = x * y     # multiplication
+z4 = x / y     # division
+z5 = x % y     # modulus
+z6 = x ** y    # exponent</code></pre>
             <li>Relational Operators</li>
             <pre class="line-numbers"><code class="language-py">x = 5
 y = 10
@@ -177,10 +177,10 @@ z3 = not x > y          # not</code></pre>
             <li>Bitwise Operators</li>
             <pre class="line-numbers"><code class="language-py">x = 5
 y = 10
-z1 = x & y    # bitwise and
-z2 = x | y    # bitwise or
-z3 = x ^ y    # bitwise xor
-z4 = ~x       # bitwise not</code></pre>
+z1 = x & y     # bitwise and
+z2 = x | y     # bitwise or
+z3 = x ^ y     # bitwise xor
+z4 = ~x        # bitwise not</code></pre>
         </ol>
         <hr>
 
@@ -394,6 +394,24 @@ print(tuple1.count(2))        # Prints 2</code></pre>
             </ol>
             <h2 id="dictionaries">Dictionaries</h2>
             <p>Dictionaries are used to store key-value pairs. They are used to store data in a structured way.</p>
+            <ol>
+                <li>Declaration</li>
+                <pre class="line-numbers"><code class="language-py">dict1 = {'key1': 'value1', 'key2': 'value2'}           # method 1
+dict2 = dict([('key1', 'value1'), ('key2', 'value2')]) # method 2
+dict3 = dict(key1='value1', key2='value2')             # method 3
+# method 4
+dict4 = {}
+dict4['key1'] = 'value1'
+dict4['key2'] = 'value2'</code></pre>
+                <li>Accessing</li>
+                <pre class="line-numbers"><code class="language-py">dict1 = {'key1': 'value1', 'key2': 'value2'}
+print(dict1['key1'])                # Prints 'value1'
+print(dict1.get('key1'))            # Prints 'value1'
+print(dict1.get('key3'))            # Prints None
+print(dict1.get('key3', 'default')) # Prints 'default'</code></pre>
+                <li>Updating</li>
+                <pre class="line-numbers"><code class="language-py">dict1 = {'key1': 'value1', 'key2': 'value2'}
+</code></pre>
             <h2 id="sets">Sets</h2>
             <p>Sets are used to store unique values. They are used to store data in a structured way.</p>
         </div>
