--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@ def decimal_to_binary(decimal_number):
     while decimal_number > 0:
         binary_number = str(decimal_number % 2) + binary_number
         decimal_number = decimal_number // 2
-    return binary_number</code></pre>
+    return binary_number
+
+# Alternative method - built-in function
+bin(decimal_number)</code></pre>
             <li>Decimal to Octal</li>
             <pre class="line-numbers"><code class="language-py"># convert decimal numbers to octal numbers
 def decimal_to_octal(decimal_number):
@@ -59,7 +62,10 @@ def decimal_to_octal(decimal_number):
     while decimal_number > 0:
         octal_number = str(decimal_number % 8) + octal_number
         octal_number = decimal_number // 8
-    return octal_number</code></pre>
+    return octal_number
+
+# Alternative method - built-in function
+oct(decimal_number)</code></pre>
             <li>Decimal to Hexadecimal</li>
             <pre class="line-numbers"><code class="language-py"># convert decimal numbers to hexadecimal numbers
 def decimal_to_hexadecimal(decimal_number):
@@ -68,7 +74,11 @@ def decimal_to_hexadecimal(decimal_number):
     while decimal_number > 0:
         hexadecimal_number = hexadecimal_number_list[decimal_number % 16] + hexadecimal_number
         decimal_number = decimal_number // 16
-    return hexadecimal_number</code></pre>
+    return hexadecimal_number
+
+# Alternative method - built-in function
+hex(decimal_number)
+</code></pre>
             <li>Binary to Decimal</li>
             <pre class="line-numbers"><code class="language-py"># convert binary numbers to decimal numbers
 def binary_to_decimal(binary_number):
@@ -77,7 +87,10 @@ def binary_to_decimal(binary_number):
     for i in range(len(binary_number) - 1, -1, -1):
         decimal_number += int(binary_number[i]) * (2 ** power)
         power += 1
-    return decimal_number</code></pre>
+    return decimal_number
+
+# Alternative method - built-in function
+int(binary_number, 2)</code></pre>
             <li>Octal to Decimal</li>
             <pre class="line-numbers"><code class="language-py"># convert octal numbers to decimal numbers
 def octal_to_decimal(octal_number):
@@ -86,7 +99,10 @@ def octal_to_decimal(octal_number):
     for i in range(len(octal_number) - 1, -1, -1):
         decimal_number += int(octal_number[i]) * (8 ** power)
         power += 1
-    return decimal_number</code></pre>
+    return decimal_number
+
+# Alternative method - built-in function
+int(octal_number, 8)</code></pre>
             <li>Hexadecimal to Decimal</li>
             <pre class="line-numbers"><code class="language-py"># convert hexadecimal numbers to decimal numbers
 def hexadecimal_to_decimal(hexadecimal_number):
@@ -96,31 +112,10 @@ def hexadecimal_to_decimal(hexadecimal_number):
     for i in range(len(hexadecimal_number) - 1, -1, -1):
         decimal_number += hexadecimal_number_list.index(hexadecimal_number[i]) * (16 ** power)
         power += 1
-    return decimal_number</code></pre>
-            <li>Binary to Octal</li>
-            <pre class="line-numbers"><code class="language-py"># convert binary numbers to octal numbers
-def binary_to_octal(binary_number):
-    return decimal_to_octal(binary_to_decimal(binary_number))</code></pre>
-            <li>Binary to Hexadecimal</li>
-            <pre class="line-numbers"><code class="language-py"># convert binary numbers to hexadecimal numbers
-def binary_to_hexadecimal(binary_number):
-    return decimal_to_hexadecimal(binary_to_decimal(binary_number))</code></pre>
-            <li>Octal to Binary</li>
-            <pre class="line-numbers"><code class="language-py"># convert octal numbers to binary numbers
-def octal_to_binary(octal_number):
-    return decimal_to_binary(octal_to_decimal(octal_number))</code></pre>
-            <li>Octal to Hexadecimal</li>
-            <pre class="line-numbers"><code class="language-py"># convert octal numbers to hexadecimal numbers
-def octal_to_hexadecimal(octal_number):
-    return decimal_to_hexadecimal(octal_to_decimal(octal_number))</code></pre>
-            <li>Hexadecimal to Binary</li>
-            <pre class="line-numbers"><code class="language-py"># convert hexadecimal numbers to binary numbers
-def hexadecimal_to_binary(hexadecimal_number):
-    return decimal_to_binary(hexadecimal_to_decimal(hexadecimal_number))</code></pre>
-            <li>Hexadecimal to Octal</li>
-            <pre class="line-numbers"><code class="language-py"># convert hexadecimal numbers to octal numbers
-def hexadecimal_to_octal(hexadecimal_number):
-    return decimal_to_octal(hexadecimal_to_decimal(hexadecimal_number))</code></pre>
+    return decimal_number
+
+# Alternative method - built-in function
+int(hexadecimal_number, 16)</code></pre>
         </ol>
         <hr>
         
@@ -232,14 +227,14 @@ class LinkedList:
     def __repr__(self):
         return str(self.items)
 
-    def __getattr__(self, key):
+    def __getitem__(self, key):
         return self.items[key]
 
     def __len__(self):
         return len(self.items)
 
     def __eq__(self, other):
-        return self.items == other.items
+        return self.items == other
     
     def __contains__(self, item):
         """Checks if an item is in the queue"""
@@ -278,14 +273,14 @@ class LinkedList:
     def __repr__(self):
         return str(self.stack)
 
-    def __getattr__(self, key):
+    def __getitems__(self, key):
         return self.stack[key]
 
     def __len__(self):
         return len(self.stack)
 
     def __eq__(self, other):
-        return self.stack == other.stack
+        return self.stack == other
 
     def __contains__(self, item):
         return item in self.stack
@@ -342,7 +337,11 @@ class LinkedList:
     fact = 1
     for i in range(2, n + 1):
         fact = fact * i
-    return fact</code></pre>
+    return fact
+
+# using library function
+import math
+math.factorial(n)</code></pre>
             <li>Fibonacci</li>
             <pre class="line-numbers"><code class="language-py">def fibonacci(n):
     """returns n terms from the series of Fibonacci numbers"""
@@ -406,7 +405,8 @@ now = lambda: datetime.now().strftime('%d-%m-%y %H:%M:%S')</code></pre>
 [i for i in range(10) if i % 2 == 0 or i % 3 == 0]
 # [0, 2, 3, 4, 6, 8, 9]</code></pre>
             <li>Sum of all the numbers in a list</li>
-            <pre class="line-numbers"><code class="language-py">list_sum = lambda lst: sum(lst)
+            <pre class="line-numbers"><code class="language-py">from functools import reduce
+list_sum = lambda arr: reduce(lambda x, y: x + y, arr)
 # >>> list_sum([2, 38, 267, 82])
 # 389</code></pre>
             <li>Swap two variables</li>
@@ -521,117 +521,106 @@ def address_validation(address):
 # regex for credit card validation - American Express
 def credit_card_validation_american_express(credit_card):
     regex = r'^3[47][0-9]{13}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - BCGlobal
 def credit_card_validation_BCGlobal(credit_card):
     regex = r'^(6541|6556)[0-9]{12}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Carte Blanche
 def credit_card_validation_carte_blanche(credit_card):
     regex = r'^389[0-9]{11}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Dankort
 def credit_card_validation_dankort(credit_card):
     regex = r'^(5019|4175|4571|4)\d{12}|^(5019|4175|4571|4)\d{14}|^(5019|4175|4571|4)\d{16}|^(5019|4175|4571|4)\d{18}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Diners Club
 def credit_card_validation_diners_club(credit_card):
     regex = r'^3(?:0[0-5]|[68][0-9])[0-9]{11}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Discover
 def credit_card_validation_discover(credit_card):
     regex = r'^65[4-9][0-9]{13}|64[4-9][0-9]{13}|6011[0-9]{12}|(622(?:12[6-9]|1[3-9][0-9]|[2-8][0-9][0-9]|9[01][0-9]|92[0-5])[0-9]{10})$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Insta Payment
 def credit_card_validation_insta_payment(credit_card):
     regex = r'^63[7-9][0-9]{13}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - JCB
 def credit_card_validation_JCB(credit_card):
     regex = r'^(?:2131|1800|35\d{3})\d{11}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Korean Local
 def credit_card_validation_korean_local(credit_card):
     regex = r'^9[0-9]{15}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Laser
 def credit_card_validation_laser(credit_card):
     regex = r'^(6304|6706|6709|6771)[0-9]{12,15}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Maestro
 def credit_card_validation_maestro(credit_card):
     regex = r'^(5018|5020|5038|6304|6759|6761|6763)[0-9]{8,15}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Mastercard
 def credit_card_validation_mastercard(credit_card):
     regex = r'^5[1-5][0-9]{14}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Solo
 def credit_card_validation_solo(credit_card):
     regex = r'^(6334|6767)[0-9]{12}|(6334|6767)[0-9]{14}|(6334|6767)[0-9]{15}$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - UnionPay
 def credit_card_validation_unionPay(credit_card):
     regex = r'^(62[0-9]{14,17})$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Visa
 def credit_card_validation_visa(credit_card):
-    regex = r'^(?:4[0-9]{12}(?:[0-9]{3})?'
-    return re.search(regex, credit_card)
+    regex = r'^(?:4[0-9]{12}(?:[0-9]{3})?$'
+    return re.fullmatch(regex, credit_card)
 
 # regex for credit card validation - Visa Mastercard
 def credit_card_validation_visa_mastercard(credit_card):
     regex = r'^(?:4[0-9]{12}(?:[0-9]{3})?|5[1-5][0-9]{14})$'
-    return re.search(regex, credit_card)
+    return re.fullmatch(regex, credit_card)
 
-# regex for credit card validation - Visa, Mastercard, American Express, Diners Club, Discover, JCB, UnionPay, Maestro, Dankort, Carte Bleue, Switch, Solo, Visa Electron
+# driver function for credit card validation
 def credit_card_validation(credit_card):
-    if credit_card_validation_american_express(credit_card):
-        return 'American Express'
-    elif credit_card_validation_BCGlobal(credit_card):
-        return 'BCGlobal'
-    elif credit_card_validation_carte_blanche(credit_card):
-        return 'Carte Blanche'
-    elif credit_card_validation_dankort(credit_card):
-        return 'Dankort'
-    elif credit_card_validation_diners_club(credit_card):
-        return 'Diners Club'
-    elif credit_card_validation_discover(credit_card):
-        return 'Discover'
-    elif credit_card_validation_insta_payment(credit_card):
-        return 'Insta Payment'
-    elif credit_card_validation_JCB(credit_card):
-        return 'JCB'
-    elif credit_card_validation_korean_local(credit_card):
-        return 'Korean Local'
-    elif credit_card_validation_laser(credit_card):
-        return 'Laser'
-    elif credit_card_validation_maestro(credit_card):
-        return 'Maestro'
-    elif credit_card_validation_mastercard(credit_card):
-        return 'Mastercard'
-    elif credit_card_validation_solo(credit_card):
-        return 'Solo'
-    elif credit_card_validation_unionPay(credit_card):
-        return 'UnionPay'
-    elif credit_card_validation_visa(credit_card):
-        return 'Visa'
-    elif credit_card_validation_visa_mastercard(credit_card):
-        return 'Visa Mastercard'
+    credit_card_validation_dict = {
+        'american_express': credit_card_validation_american_express,
+        'BCGlobal': credit_card_validation_BCGlobal,
+        'carte_blanche': credit_card_validation_carte_blanche,
+        'dankort': credit_card_validation_dankort,
+        'diners_club': credit_card_validation_diners_club,
+        'discover': credit_card_validation_discover,
+        'insta_payment': credit_card_validation_insta_payment,
+        'JCB': credit_card_validation_JCB,
+        'korean_local': credit_card_validation_korean_local,
+        'laser': credit_card_validation_laser,
+        'maestro': credit_card_validation_maestro,
+        'mastercard': credit_card_validation_mastercard,
+        'solo': credit_card_validation_solo,
+        'unionPay': credit_card_validation_unionPay,
+        'visa': credit_card_validation_visa,
+        'visa_mastercard': credit_card_validation_visa_mastercard
+    }
+    for key, value in credit_card_validation_dict.items():
+        if value(credit_card):
+            return key
     else:
         return 'Unknown'</code></pre>
             <li>Date Validation</li>
@@ -648,13 +637,6 @@ def date_validation(date):
 def email_validation(email):
     regex = r'(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$)'
     return re.search(regex, email)</code></pre>
-            <li>Name Validation</li>
-            <pre class="line-numbers"><code class="language-py">import regex as re
-
-# regex for name validation
-def name_validation(name):
-    regex = r'^[a-zA-Z]{2,}$'
-    return re.search(regex, name)</code></pre>
             <li>Password Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
@@ -698,15 +680,16 @@ def IP_validation(IP):
         <ol>
             <li>Binary search</li>
             <pre class="line-numbers"><code class="language-py"># Binary Search - time complexity: O(log(n))
-def BinarySearch(arr, element):
-    LOW = 0
-    TOP = len(arr)-1
-    while LOW <= TOP:
-        MID = (TOP + LOW)//2
-        if element > arr[MID]:
-            LOW += 1
-        elif element < arr[MID]:
-            TOP -= 1
+def binary_search(list1, n):  
+    LOW = 0  
+    TOP = len(list1) - 1  
+    MID = 0  
+    while LOW <= TOP:  
+        MID = (TOP + LOW) // 2
+        if list1[MID] < n:
+            LOW = MID + 1
+        elif list1[MID] > n:
+            TOP = MID - 1
         else:
             return MID
     return -1</code></pre>
@@ -731,7 +714,7 @@ def jump_search(arr, element):
     return -1</code></pre>
                 <li>Linear search</li>
                 <pre class="line-numbers"><code class="language-py"># Linear Search - time complexity: O(n)
-def LinearSearch(arr, element):
+def linear_search(arr, element):
     for i in range(len(arr)):
         if arr[i] == element:
             return i
