--- a/index.html
+++ b/index.html
@@ -515,89 +515,89 @@ def palindrome_prime(num):
 # regex for address validation
 def address_validation(address):
     regex = r'^[a-zA-Z0-9\s,.-]{2,}$'
-    return re.search(regex, address)</code></pre>
+    return bool(re.search(regex, address))</code></pre>
             <li>Credit Card Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
 # regex for credit card validation - American Express
 def credit_card_validation_american_express(credit_card):
     regex = r'^3[47][0-9]{13}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - BCGlobal
 def credit_card_validation_BCGlobal(credit_card):
     regex = r'^(6541|6556)[0-9]{12}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Carte Blanche
 def credit_card_validation_carte_blanche(credit_card):
     regex = r'^389[0-9]{11}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Dankort
 def credit_card_validation_dankort(credit_card):
     regex = r'^(5019|4175|4571|4)\d{12}|^(5019|4175|4571|4)\d{14}|^(5019|4175|4571|4)\d{16}|^(5019|4175|4571|4)\d{18}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Diners Club
 def credit_card_validation_diners_club(credit_card):
     regex = r'^3(?:0[0-5]|[68][0-9])[0-9]{11}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Discover
 def credit_card_validation_discover(credit_card):
     regex = r'^65[4-9][0-9]{13}|64[4-9][0-9]{13}|6011[0-9]{12}|(622(?:12[6-9]|1[3-9][0-9]|[2-8][0-9][0-9]|9[01][0-9]|92[0-5])[0-9]{10})$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Insta Payment
 def credit_card_validation_insta_payment(credit_card):
     regex = r'^63[7-9][0-9]{13}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - JCB
 def credit_card_validation_JCB(credit_card):
     regex = r'^(?:2131|1800|35\d{3})\d{11}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Korean Local
 def credit_card_validation_korean_local(credit_card):
     regex = r'^9[0-9]{15}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Laser
 def credit_card_validation_laser(credit_card):
     regex = r'^(6304|6706|6709|6771)[0-9]{12,15}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Maestro
 def credit_card_validation_maestro(credit_card):
     regex = r'^(5018|5020|5038|6304|6759|6761|6763)[0-9]{8,15}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Mastercard
 def credit_card_validation_mastercard(credit_card):
     regex = r'^5[1-5][0-9]{14}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Solo
 def credit_card_validation_solo(credit_card):
     regex = r'^(6334|6767)[0-9]{12}|(6334|6767)[0-9]{14}|(6334|6767)[0-9]{15}$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - UnionPay
 def credit_card_validation_unionPay(credit_card):
     regex = r'^(62[0-9]{14,17})$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Visa
 def credit_card_validation_visa(credit_card):
     regex = r'^(?:4[0-9]{12}(?:[0-9]{3})?$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # regex for credit card validation - Visa Mastercard
 def credit_card_validation_visa_mastercard(credit_card):
     regex = r'^(?:4[0-9]{12}(?:[0-9]{3})?|5[1-5][0-9]{14})$'
-    return re.fullmatch(regex, credit_card)
+    return bool(re.fullmatch(regex, credit_card))
 
 # driver function for credit card validation
 def credit_card_validation(credit_card):
@@ -630,49 +630,49 @@ def credit_card_validation(credit_card):
 # regex for date validation (DD/MM/YYYY)
 def date_validation(date):
     regex = r'^(1[0-2]|0[1-9])/(3[01]|[12][0-9]|0[1-9])/[0-9]{4}$'
-    return re.search(regex, date)</code></pre>
+    return bool(re.fullmatch(regex, date))</code></pre>
             <li>Email Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
 # regex for email validation
 def email_validation(email):
-    regex = r"(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$)"
-    return re.search(regex, email)</code></pre>
+    regex = r"^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"
+    return bool(re.fullmatch(regex, email))</code></pre>
             <li>Password Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
 # regex for password validation
 def password_validation(password):
     regex = r'^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
-    return re.search(regex, password)</code></pre>
+    return bool(re.fullmatch(regex, password))</code></pre>
             <li>Phone Number Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
 # regex for phone number validation
 def phone_validation(phone):
     regex = r'^[0-9]{10}$'
-    return re.search(regex, phone)</code></pre>
+    return bool(re.fullmatch(regex, phone))</code></pre>
             <li>Time Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
 # regex for time validation HH:MM:SS
 def time_validation(time):
     regex = r'^([0-1]?[0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]$'
-    return re.search(regex, time)</code></pre>
+    return bool(re.fullmatch(regex, time))</code></pre>
             <li>URL Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
 # regex for url validation
 def URL_validation(url):
     regex = r'^(?:http(s)?:\/\/)?[\w.-]+(?:\.[\w\.-]+)+[\w\-\._~:/?#[\]@!\$&\'\(\)\*\+,;=.]+$'
-    return re.search(regex, url)</code></pre>
+    return bool(re.fullmatch(regex, url))</code></pre>
             <li>IP Address Validation</li>
             <pre class="line-numbers"><code class="language-py">import regex as re
 
 # regex for IP address validation IPv4
 def IP_validation(IP):
     regex = r'(\b25[0-5]|\b2[0-4][0-9]|\b[01]?[0-9][0-9]?)(\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)){3}'
-    return re.search(regex, IP)</code></pre>
+    return bool(re.fullmatch(regex, IP))</code></pre>
         </ol>
         <hr>
 
